<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTourny</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="userName">User Name:</string>
    <string name="passWord">Password: </string>
    <string name="usernameHint">Enter User Name</string>
    <string name="name">Name:</string>
    <string name="fName">First Name:</string>
    <string name="emailText">Email:</string>
    <string name="cityText">City:</string>
    <string name="createAccount">Create Account</string>
    <string name="lName">Last Name:</string>
    <string name="createTournament">Create Tournament</string>
    <string name="joinTournament">Join Tournament</string>
    <string name="tournyNameLabel">Tournament\nName:</string>
    <string name="tournyLocationLabel">Course City:</string>
    <string name="tournyDate">Tournament\nStart Date:</string>
    <string name="passcodeLabel">Enter\nPasscode:</string>
    <string name="stateText">State:</string>
    <string name="tournyStatelabel">Course State:</string>
    <string name="navigation_settings">Navigation</string>
    <string name="login">Login</string>
    <string name="new_user">Create Account</string>
    <string name="createTourny">Create Tournament</string>
    <string name="courseNameLabel">Course Name:</string>
    <string name="tournamentStateSelectionLabel">Select State:</string>
    <string name="tournamentSelectStateLabel">Select State:</string>
    <string name="tournamentSelectDateLabel">Select Date:</string>
    <string name="tournamentSelectLabel">Select Tournament Below</string>
    <string name="editAccount">Update</string>
    <string name="pictureLabel">Change\nPicture:</string>
    <string name="cannot">Cannot</string>
    <string name="place1">1</string>
    <string name="userNameHolder">USERNAME</string>
    <string name="scoreHolder">000</string>
    <string name="place2">2</string>
    <string name="place3">3</string>
    <string name="place4">4</string>
    <string name="place5">5</string>
    <string name="place6">6</string>
    <string name="place7">7</string>
    <string name="place8">8</string>
    <string name="place9">9</string>
    <string name="place10">10</string>
    <string name="leaderboardBack">Back</string>
    <string name="editAccountButton">Edit Account</string>

    <string-array name="states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

</resources>
