<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="edu.utah.cs4962.golfleaderboard.CreateJoinTournament">

    <Button
        android:id="@+id/createTournamentButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/apptheme_btn_default_normal_holo_light"
        android:layout_below="@id/emailEntry"
        android:text="@string/createTournament"
        android:onClick="launchCreateTournament"
        />

    <Button
        android:id="@+id/joinTournamentButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/apptheme_btn_default_normal_holo_light"
        android:layout_below="@id/createTournamentButton"
        android:text="@string/joinTournament"
        android:onClick="launchJoinTournament"
        />

    <Button
        android:id="@+id/editAccountButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/apptheme_btn_default_normal_holo_light"
        android:layout_below="@id/joinTournamentButton"
        android:text="@string/editAccountButton"
        android:onClick="launchEditAccount"
        />

</RelativeLayout>