<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="edu.utah.cs4962.golfleaderboard.EditAccount">

    <ScrollView
        android:id="@+id/scroll_id"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical"
        tools:context="edu.utah.cs4962.golfleaderboard.EditAccount">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        tools:context="edu.utah.cs4962.golfleaderboard.EditAccount">

            <TextView
                android:id="@+id/pictureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/pictureLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/btnIntend"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_toRightOf="@+id/pictureLabel"
                android:layout_marginLeft="50dp"
                android:background="@drawable/default_user"
                />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/pictureLabel"
                android:layout_below="@+id/pictureLabel"
                android:layout_marginTop="100dp"
                android:text="@string/passWord"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/createPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/passwordText"
                android:layout_alignBottom="@+id/passwordText"
                android:layout_marginLeft="50dp"
                android:hint="Password"
                android:inputType="textPassword">

                <requestFocus/>
            </EditText>

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/passwordText"
                android:layout_below="@+id/passwordText"
                android:layout_marginTop="25dp"
                android:text="@string/fName"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/nameTextView"
                android:layout_alignLeft="@+id/createPassword"
                android:layout_alignRight="@+id/createPassword"
                android:hint="First Name">

                <requestFocus/>
            </EditText>

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nameTextView"
                android:layout_below="@+id/nameTextView"
                android:layout_marginTop="25dp"
                android:text="@string/lName"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/lastNameTextEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/lastNameTextView"
                android:layout_alignLeft="@+id/createPassword"
                android:layout_alignRight="@+id/createPassword"
                android:hint="Last Name">

                <requestFocus/>
            </EditText>

            <TextView
                android:id="@+id/cityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lastNameTextView"
                android:layout_below="@+id/lastNameTextView"
                android:layout_marginTop="25dp"
                android:text="@string/cityText"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/cityEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/cityText"
                android:layout_alignLeft="@+id/lastNameTextEntry"
                android:layout_alignRight="@+id/lastNameTextEntry"
                android:hint="City">

                <requestFocus/>
            </EditText>

            <TextView
                android:id="@+id/stateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cityText"
                android:layout_below="@+id/cityText"
                android:layout_marginTop="25dp"
                android:text="@string/stateText"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/stateEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/stateText"
                android:layout_alignLeft="@+id/lastNameTextEntry"
                android:layout_alignRight="@+id/lastNameTextEntry"
                android:hint="State">

                <requestFocus/>
            </EditText>

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/stateText"
                android:layout_below="@+id/stateText"
                android:layout_marginTop="25dp"
                android:text="@string/emailText"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/emailEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/emailText"
                android:layout_alignLeft="@+id/stateEntry"
                android:layout_alignRight="@+id/stateEntry"
                android:hint="Email">

                <requestFocus/>
            </EditText>

            <TextView
                android:id="@+id/usernameTaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:text="That username is taken, please try another."
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFF0000"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/updateAccountButton"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_below="@id/emailEntry"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/apptheme_btn_default_normal_holo_light"
                android:onClick="updateAccount"
                android:text="@string/editAccount"
                />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>