<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Top 10 Leaderboard"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/place1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place1"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/place1user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place1"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place1score"
        android:layout_toStartOf="@+id/place1score"/>

    <TextView
        android:id="@+id/place1score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place1user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"/>

    <TextView
        android:id="@+id/place2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place1"
        android:layout_alignEnd="@+id/place1"/>

    <TextView
        android:id="@+id/place2user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place2"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place2score"
        android:layout_toStartOf="@+id/place2score"
        android:layout_below="@id/place1user"/>

    <TextView
        android:id="@+id/place2score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place2user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place1score"/>

    <TextView
        android:id="@+id/place3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place2"
        android:layout_alignEnd="@+id/place2"/>

    <TextView
        android:id="@+id/place3user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place3"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place3score"
        android:layout_toStartOf="@+id/place3score"
        android:layout_below="@id/place2user"/>

    <TextView
        android:id="@+id/place3score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place3user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place2score"/>

    <TextView
        android:id="@+id/place4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place3"
        android:layout_alignEnd="@+id/place3"/>

    <TextView
        android:id="@+id/place4user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place4"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place4score"
        android:layout_toStartOf="@+id/place4score"
        android:layout_below="@id/place3user"/>

    <TextView
        android:id="@+id/place4score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place4user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place3score"/>
    <TextView
        android:id="@+id/place5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place4"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place5"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place4"
        android:layout_alignEnd="@+id/place4"/>

    <TextView
        android:id="@+id/place5user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place5"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place5score"
        android:layout_toStartOf="@+id/place5score"
        android:layout_below="@id/place4user"/>

    <TextView
        android:id="@+id/place5score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place5user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place4score"/>


    <TextView
        android:id="@+id/place6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place5"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place6"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place5"
        android:layout_alignEnd="@+id/place5"/>

    <TextView
        android:id="@+id/place6user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place6"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place6score"
        android:layout_toStartOf="@+id/place6score"
        android:layout_below="@id/place5user"/>

    <TextView
        android:id="@+id/place6score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place6user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place5score"/>

    <TextView
        android:id="@+id/place7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place6"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place7"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place7"
        android:layout_alignEnd="@+id/place7"/>

    <TextView
        android:id="@+id/place7user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place7"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place7score"
        android:layout_toStartOf="@+id/place7score"
        android:layout_below="@id/place6user"/>

    <TextView
        android:id="@+id/place7score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place7user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place6score"/>

    <TextView
        android:id="@+id/place8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place7"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place8"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place8"
        android:layout_alignEnd="@+id/place8"/>

    <TextView
        android:id="@+id/place8user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place8"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place8score"
        android:layout_toStartOf="@+id/place8score"
        android:layout_below="@id/place7user"/>

    <TextView
        android:id="@+id/place8score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place8user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place7score"/>

    <TextView
        android:id="@+id/place9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place8"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place9"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place9"
        android:layout_alignEnd="@+id/place9"/>

    <TextView
        android:id="@+id/place9user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place9"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place9score"
        android:layout_toStartOf="@+id/place9score"
        android:layout_below="@id/place8user"/>

    <TextView
        android:id="@+id/place9score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place9user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place8score"/>

    <TextView
        android:id="@+id/place10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/place9"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/place10"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignRight="@+id/place10"
        android:layout_alignEnd="@+id/place10"/>

    <TextView
        android:id="@+id/place10user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNameHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place10"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/place10score"
        android:layout_toStartOf="@+id/place10score"
        android:layout_below="@id/place9user"/>

    <TextView
        android:id="@+id/place10score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreHolder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/place10user"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@id/place9score"/>

    <Button
        android:id="@+id/leaderboardBack"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/place10user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/apptheme_btn_default_normal_holo_light"
        android:onClick="leaderboardBack"
        android:text="@string/leaderboardBack"
        />
</RelativeLayout>